--- a/templates/contacts/list_contacts.html
+++ b/templates/contacts/list_contacts.html
@@ -28,6 +28,7 @@
     </div>
     {% endif %}
 
+    
     {% if contact.email %}
     <div class="flex">
       <div class="pr2"><i class="icofont-ui-email"></i></div>
@@ -35,11 +36,17 @@
     </div>
     {% endif %}
 
+    {% if contact.birthday %}
+    <div class="flex">
+      <div class="pr2"><i class="icofont-ui-birthday-cake"></i></div>
+      <div>{{ contact.birthday }}</div>
+    </div>
+    {% endif %}
     <p>
       <a href="{% url 'edit_contact' pk=contact.pk %}">Edit Contact</a><br>    
       <a class="red" href="{% url 'delete_contact' pk=contact.pk %}">Delete Contact</a>
     </p>
-  </div>
+    </div>
   {% endfor %}
 </div>  
 {% endblock %}
